<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gc.mobilecompproject.Threat"
    android:clickable="false">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imageView3"
        android:background="@drawable/guard"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:id="@+id/btn_guard"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#F5F5F5"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imageView4"
        android:background="@drawable/ilko"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hall_assist"
        android:id="@+id/btn_ilko"
        android:layout_alignTop="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignRight="@+id/btn_guard"
        android:layout_alignEnd="@+id/btn_guard"
        android:background="#F5F5F5"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imageView5"
        android:background="@drawable/police"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/police"
        android:id="@+id/btn_police"
        android:layout_alignTop="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_alignRight="@+id/btn_ilko"
        android:layout_alignEnd="@+id/btn_ilko"
        android:background="#F5F5F5"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contacts"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/howto2"
        android:id="@+id/textView6"
        android:textSize="21dp"
        android:layout_above="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str1"
        android:id="@+id/textView7"
        android:layout_above="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str2"
        android:id="@+id/textView8"
        android:layout_above="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str3"
        android:id="@+id/textView9"
        android:layout_above="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str4"
        android:id="@+id/textView10"
        android:layout_above="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str5"
        android:id="@+id/textView11"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
